[tool.poetry]
name = "hydraulic-monitoring"
version = "0.1.0"
description = ""
authors = ["Thomas Levy <thom.levy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
